--- a/Abonimi/abonimi.css
+++ b/Abonimi/abonimi.css
@@ -1,212 +1,214 @@
-@import url(
-'https://fonts.googleapis.com/css?family=Big+Shoulders+Text:100, 300, 400, 500, 600, 700, 800, 900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://use.fontawesome.com/releases/v5.13.0/css/all.css");
 
-/* font-family: 'Big Shoulders Text', cursive; */
+:root {
+    --font1: 'Heebo', sans-serif;
+    --font2: 'Fira Sans Extra Condensed', sans-serif;
+    --font3: 'Roboto', sans-serif;
 
-.nav-flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    z-index: 100;
-    left: 0;
-    width: 100%;
-    padding: 0;
+    --btnbg: #b68d8d;
+    --btnfontcolor: rgb(61, 61, 61);
+    --btnfontcolorhover: rgb(255, 255, 255);
+    --btnbghover: #ffc116;
+    --btnactivefs: rgb(193, 184, 156);
+
+
+    --label-index: #e60d0d;
+    --danger-index: #5bc257;
+    /* PAGINATE */
+    --link-color: #000;
+    --link-color-hover: #fff;
+    --bg-content-color: #ffcc00;
+
 }
 
-.nav-flex-row li {
-    text-decoration: none;
-    list-style-type: none;
-    padding: 20px 15px;
+
+.container-fluid {
+    max-width: 1400px;
+
 }
 
-.nav-flex-row li a {
-    font-family: 'Big Shoulders Text', cursive;
-    color: #000;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-weight: 300;
-}
-
-.nav-flex-row li a:hover {
-    background: #E7E7E7;
-}
-
-.section-intro {
-    height: 820px;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.section-intro {
-    background-image: url(/download.jpg);
-}
-
-.section-intro h1 {
-    text-align: center;
-    color: #000;
-    font-size: 4em;
-    font-weight: 700;
-}
-
-.section-intro header {
-    display: flex;
-    flex: 4;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.link-to-book-wrapper {
-    flex: 1;
-}
-
-.about-section {
-    display: flex;
-    align-items: center;
-    background-color: #f3f3f3c0;
-    padding: 50px 30px;
-}
-
-.link-to-book {
-    color: #ffffff;
-    display: block;
-    border: 2px solid #ffffff;
-    padding: 5px 10px;
-}
-
-a.link-to-book:hover {
-    background-color: #ffffff;
-    color: #95999e;
-    text-decoration: none;
-}
-
-.about-section p,
-.about-section h3 {
-    text-align: center;
-    width: 60%;
-    margin: auto;
-    font-family: 'Big Shoulders Text', cursive;
-    font-size: 1.8em;
-    text-transform: uppercase;
-}
-
-.carousel-inner {
-    height: 700px;
-}
-
-.row-flex {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-column-form {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    margin: 30px 20px;
-}
-
-.btn.btn-primary {
-    font-family: 'Big Shoulders Text', cursive;
-    color: #ffffff;
-    background-color: #95999e;
-    text-transform: uppercase;
-    font-size: 16px;
-    padding: 5px 10px;
-    letter-spacing: 2px;
+.card {
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
+    transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
     border: 0;
+    border-radius: 1rem;
 }
 
-.btn.btn-primary:hover {
-    background-color: #747474;
+.card-img,
+.card-img-top {
+    border-top-left-radius: calc(1rem - 1px);
+    border-top-right-radius: calc(1rem - 1px);
 }
 
-.opening-time,
-.contact-address {
-    flex: 1;
-    margin: 30px 20px;
-    font-size: 1.2em;
+
+.card h5 {
+    overflow: hidden;
+    height: 55px;
+    font-weight: 300;
+    font-size: 1rem;
 }
 
-.form-group p {
-    font-size: 1.2em;
+.card h5 a {
+    color: black;
+    text-decoration: none;
 }
 
-.opening-time p span,
-.contact-address p span {
-    display: block;
+.card-img-top {
+    width: 100%;
+    min-height: 250px;
+    max-height: 250px;
+    object-fit: contain;
+    padding: 30px;
 }
 
-@media (min-width:577px) and (max-width: 800px) {
+.card h2 {
+    font-size: 1rem;
+}
 
-    .section-intro {
-        height: 500px;
+
+.card:hover {
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+}
+
+/* Centered text */
+.label-top {
+    position: absolute;
+    background-color: var(--label-index);
+    color: #fff;
+    top: 8px;
+    right: 8px;
+    padding: 5px 10px 5px 10px;
+    font-size: .7rem;
+    font-weight: 600;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+.top-right {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    font-size: 1rem;
+    font-weight: 900;
+    background: #8bc34a;
+    line-height: 90px;
+    text-align: center;
+    color: white;
+}
+
+.top-right span {
+    display: inline-block;
+    vertical-align: middle;
+    /* line-height: normal; */
+    /* padding: 0 25px; */
+}
+
+.aff-link {
+    /* text-decoration: overline; */
+    font-weight: 500;
+}
+
+.over-bg {
+    background: rgba(53, 53, 53, 0.85);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(0.0px);
+    -webkit-backdrop-filter: blur(0.0px);
+    border-radius: 10px;
+}
+.bold-btn {
+
+    font-size: 1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 5px 50px 5px 50px;
+}
+.box .btn {
+    font-size: 1.5rem;
+}
+
+@media (max-width: 1025px) {
+    .btn {
+        padding: 5px 40px 5px 40px;
     }
-
-    .about-section p,
-    .about-section h3 {
-        font-size: 20px;
-    }
-
-    .carousel-inner {
-        height: auto;
-    }
-
-    .row-flex {
-        display: flex;
-        flex-direction: column;
+}
+@media (max-width: 250px) {
+    .btn {
+        padding: 5px 30px 5px 30px;
     }
 }
 
-@media screen and (max-width: 576px) {
-    .section-intro {
-        height: 300px;
-    }
-
-    .about-section {
-        padding: 30px;
-    }
-
-    .section-intro h1 {
-        font-size: 2em;
-    }
-
-    .about-section p,
-    .about-section h3 {
-        font-size: 15px;
-    }
-
-    .carousel-inner {
-        height: auto;
-    }
-
-    .row-flex {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .row-flex h3 {
-        font-size: 25px;
-        text-align: center;
-    }
-
-    .form-group p {
-        font-size: 15px;
-    }
-
-    .opening-time p span,
-    .contact-address p span {
-        font-size: 15px;
-        text-align: center;
-    }
-
+/* START BUTTON */
+.btn-warning {
+    background: var(--btnbg);
+    color: var(--btnfontcolor);
+    fill: #ffffff;
+    border: none;
+    text-decoration: none;
+    outline: 0;
+    /* box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25); */
+    border-radius: 100px;
+}
+.btn-warning:hover {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
+}
+.btn-check:focus + .btn-warning, .btn-warning:focus {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
+}
+.btn-warning:active:focus {
+    box-shadow: 0 0 0 0.25rem var(--btnactivefs);
+}
+.btn-warning:active {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
 }
 
-.carousel-item img {
-    background-repeat: no-repeat;
-    background-size: cover;
+/* END BUTTON */
+
+.bg-success {
+    font-size: 1rem;
+    background-color: var(--btnbg)!important;
+    color: var(--btnfontcolor)!important;
+}
+
+.bg-danger {
+    font-size: 1rem;
+}
+
+
+.price-hp {
+    font-size: 1rem;
+    font-weight: 600;
+    color: darkgray;
+}
+
+.amz-hp {
+    font-size: .7rem;
+    font-weight: 600;
+    color: darkgray;
+}
+
+.fa-question-circle:before {
+    /* content: "\f059"; */
+    color: #500d0d;
+}
+
+.fa-heart:before {
+    color:crimson;
+}
+.fa-chevron-circle-right:before {
+    color: darkgray;
 }
