--- a/aboutAs/aboutAs.css
+++ b/aboutAs/aboutAs.css
@@ -14,7 +14,7 @@ header, footer {
 }
 
 nav {
-    background-color: #333;
+    background-color: #6d5b5b;
     color: white;
     padding: 10px;
 }
