--- a/contact/style.css
+++ b/contact/style.css
@@ -23,7 +23,7 @@ hr {
     max-width: 600px;
     margin: 10px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #d8cbcb;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -84,7 +84,7 @@ input[type="submit"],
 input[type="reset"] {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #6d5b5b;
     color: white;
     border: none;
     border-radius: 4px;
@@ -94,7 +94,7 @@ input[type="reset"] {
 
 input[type="submit"]:hover,
 input[type="reset"]:hover {
-    background-color: #45a049;
+    background-color: #615353;
 }
 
 /* Modal styles */
