--- a/semundjet/css.css
+++ b/semundjet/css.css
@@ -16,6 +16,8 @@
   background: var(--background);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.075);
   border: 1px solid #d9d9d9;
+  width: 80%; /* Added width to center the accordion */
+  margin: auto; /* Added margin auto to center the accordion */
 }
 .accordion .card {
   overflow: hidden;
@@ -96,6 +98,7 @@ h1 {
   font-size: 2rem;
   font-weight: 400;
   color: gray;
+  text-align: center; /* Centering the title */
 }
 
 a {
