--- a/Abonimi/abonimi.css
+++ b/Abonimi/abonimi.css
@@ -41,7 +41,7 @@
     border: 0;
     border-radius: 1rem;
     width: 400px; /* Set width to 100% for responsiveness */
-    height:1000px;
+    /*height:300px;*/
 }
 
 .card-img-sub,
@@ -248,6 +248,4 @@
     margin-top: -20px; /* Adjust this value as needed */
     margin-right: 15px;
 }
-
-
 
