--- a/Nutricion/nutricion.css
+++ b/Nutricion/nutricion.css
@@ -13,12 +13,32 @@ main {
     align-items: center; /* Centers items horizontally */
 }
 
+
 footer {
     background-color: #11395a;
     color: seagreen;
     padding: 1rem;
     text-align: center;
     margin-top: 1rem;
+}
+
+.card .container a {
+    text-decoration: none; /* Remove underline */
+    color: #551650; /* Set text color for the link */
+}
+
+
+.top-button {
+    text-decoration: none; /* Remove underline */
+    color: #dc0303; /* Set text color for the link */
+}
+
+.top-button:hover {
+    text-decoration: underline; /* Add underline on hover */
+}
+
+.top-button-container {
+    margin-bottom: 20px; /* Add spacing between the button and content */
 }
 
 .the-content{
@@ -156,4 +176,35 @@ img{
 #femij{
     color: #9f3d95;
     text-decoration: none;
+}
+
+.top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #333;
+    color: white;
+    padding: 12px 24px;
+    border:none;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    opacity: 0.8;
+    transition: all 0.3s ease-in-out;
+}
+
+.top-button:hover {
+    background-color: #444;
+    opacity: 1;
+}
+
+.top-button:focus {
+    outline: none;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+}
+
+.top-button:active {
+    background-color: #222;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transform: translateY(2px);
 }
