--- a/homePage/styles.css
+++ b/homePage/styles.css
@@ -276,10 +276,37 @@ h1+p {
   position: fixed;
   bottom: 20px;
   left: 20px;
-  color: hsl(0, 100%, 1%);
+  color: hsl(0, 7%, 48%);
   font-size: 1.6rem;
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #837272;
+    width: 150px; /* Shkurton madhësinë e dropdown menu-së */
+    padding: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    transition: opacity 0.4s, visibility 0.4s;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 8px; /* Shkurton rrethimet e dropdown menu-së */
+}
 
+.dropdown:hover .dropdown-content {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 10px 14px; /* Shkurton polsat e tekstit në dropdown menu */
+    text-decoration: none;
+    display: block;
+}
 
 
 
