--- a/menu/menu.css
+++ b/menu/menu.css
@@ -85,7 +85,7 @@ body {
     padding-left: 30px;
 }
 .navbar-links li a:hover {
-    color: #ff3f34;
+    color: #615353;
 }
 
 .header {
@@ -101,7 +101,7 @@ body {
 
 .header-inner {
     text-align: center;
-    color: #ff3f34;
+    color: #615353;
     text-shadow: 0px 10px 10px rgba(0, 0, 0, .8);
 }
 
