--- a/homePage/styles.css
+++ b/homePage/styles.css
@@ -1,4 +1,4 @@
-/*!* style.css *!*/
+style.css
 
 /* CSS Reset */
 
@@ -11,16 +11,15 @@
 }
 .text-container .background-image{
 
-        /* Vendosni adresën e imazhit tuaj si background */
-        background-size: cover; /* Përshtat madhësinë e imazhit për të mbuluar plotësisht kontekstin */
-        background-position: center; /* Vendos pozicionin e qendrës së imazhit */
-        opacity: 0.5; /* Përcakto transparencën e imazhit */
-        padding: 20px; /* Përcakto transparencën e imazhit */
-        background-image: url('foto.jpg');
+    /* Vendosni adresën e imazhit tuaj si background */
+    background-size: cover; /* Përshtat madhësinë e imazhit për të mbuluar plotësisht kontekstin */
+    background-position: center; /* Vendos pozicionin e qendrës së imazhit */
+    opacity: 0.5; /* Përcakto transparencën e imazhit */
+    padding: 20px; /* Përcakto transparencën e imazhit */
+    background-image: url('foto.jpg');
 
 }
-
-/*!* Header Styling *!*/
+/*Header Styling*/
 
 
 #top {
@@ -137,9 +136,9 @@
 }
 
 
-/*.subscription-box .btn:hover {*/
-/*    background-color: #873232;*/
-/*}*/
+.subscription-box .btn:hover {
+        background-color: #873232;
+ }
 
 #row1 {
     color: black;
@@ -173,140 +172,140 @@
 
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-  --background-color: hsl(180, 8%, 44%);
+    --background-color: hsl(180, 8%, 44%);
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  min-height: 100vh;
-  padding: 2rem;
+    min-height: 100vh;
+    padding: 2rem;
 
-  color: hsla(0, 0%, 0%, .6);
-  background: var(--background-color);
-  text-align: center;
+    color: hsla(0, 0%, 0%, .6);
+    background: var(--background-color);
+    text-align: center;
 }
 
 h1 {
-  font-size: 3.2rem;
-  padding-top: 2rem;
+    font-size: 3.2rem;
+    padding-top: 2rem;
 }
 
 h1+p {
-  font-size: 1.8rem;
-  padding: 2rem 0 3rem;
+    font-size: 1.8rem;
+    padding: 2rem 0 3rem;
 }
 
 .main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrap {
-  margin: 2rem;
+    margin: 2rem;
 
-  transform-style: preserve-3d;
-  transform: perspective(100rem);
+    transform-style: preserve-3d;
+    transform: perspective(100rem);
     display: inline-block;
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .container {
-  --rX: 0;
-  --rY: 0;
-  --bX: 50%;
-  --bY: 80%;
+    --rX: 0;
+    --rY: 0;
+    --bX: 50%;
+    --bY: 80%;
 
-  width: 30rem;
-  height: 36rem;
-  border: 1px solid var(--background-color);
-  border-radius: 1.6rem;
-  padding: 4rem;
+    width: 30rem;
+    height: 36rem;
+    border: 1px solid var(--background-color);
+    border-radius: 1.6rem;
+    padding: 4rem;
 
-  display: flex;
-  align-items: flex-end;
+    display: flex;
+    align-items: flex-end;
 
-  position: relative;
-  transform: rotateX(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
+    position: relative;
+    transform: rotateX(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
 
-  background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), url("https://i.pinimg.com/originals/6e/25/6a/6e256ae60527afd05583d17676a622e5.jpg");
-  background-position: var(--bX) var(--bY);
-  background-size: 40rem auto;
-  box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);
+    background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), url("https://i.pinimg.com/originals/6e/25/6a/6e256ae60527afd05583d17676a622e5.jpg");
+    background-position: var(--bX) var(--bY);
+    background-size: 40rem auto;
+    box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);
 
-  transition: transform .6s 1s;
+    transition: transform .6s 1s;
 }
 
 .container::before,
 .container::after {
-  content: "";
+    content: "";
 
-  width: 2rem;
-  height: 2rem;
-  border: 1px solid #fff;
+    width: 2rem;
+    height: 2rem;
+    border: 1px solid #fff;
 
-  position: absolute;
-  z-index: 2;
+    position: absolute;
+    z-index: 2;
 
-  opacity: .3;
-  transition: .3s;
+    opacity: .3;
+    transition: .3s;
 }
 
 .container::before {
-  top: 2rem;
-  right: 2rem;
+    top: 2rem;
+    right: 2rem;
 
-  border-bottom-width: 0;
-  border-left-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
 }
 
 .container::after {
-  bottom: 2rem;
-  left: 2rem;
+    bottom: 2rem;
+    left: 2rem;
 
-  border-top-width: 0;
-  border-right-width: 0;
+    border-top-width: 0;
+    border-right-width: 0;
 }
 
 .container--active {
-  transition: none;
+    transition: none;
 }
 
 .container--2 {
-  filter: hue-rotate(80deg) saturate(140%);
+    filter: hue-rotate(80deg) saturate(140%);
 }
 
 .container--3 {
-  filter: hue-rotate(160deg) saturate(140%);
+    filter: hue-rotate(160deg) saturate(140%);
 }
 
 .container p {
-  color: hsl(0, 100%, 1%);
-  font-size: 2.2rem;
+    color: hsl(0, 100%, 1%);
+    font-size: 2.2rem;
 }
 
 .wrap:hover .container::before,
 .wrap:hover .container::after {
-  width: calc(100% - 4rem);
-  height: calc(100% - 4rem);
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
 }
 
 .abs-site-link {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  color: hsl(0, 7%, 48%);
-  font-size: 1.6rem;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    color: hsl(0, 7%, 48%);
+    font-size: 1.6rem;
 }
 .dropdown-content {
     display: none;
@@ -341,8 +340,3 @@ h1+p {
     color: #615353;
     text-shadow: 0px 10px 10px rgba(0, 0, 0, .8);
 }
-
-
-
-
-/* edhe kjooooo0000*/
