--- a/Abonimi/abonimi.css
+++ b/Abonimi/abonimi.css
@@ -250,3 +250,24 @@
     margin-right: 15px;
 }
 
+.row-cols-1, .row-cols-xs-2, .row-cols-sm-2, .row-cols-lg-4 {
+    justify-content: space-between; /* Ensures cards are spread out across the row */
+}
+
+.card-sub {
+    height: 600px; /* Increased height from your original settings */
+    margin: 37px; /* Adds more space around each card */
+    width: 350px; /* Keeping your width the same as defined, adjust if needed */
+}
+
+.card-img-top-sub {
+    min-height: 350px; /* Ensuring image height is adequate for taller cards */
+    max-height: 350px; /* Ensuring image height is consistent */
+}
+
+@media (max-width: 968px) {
+    .card-sub {
+        width: 100%; /* This makes sure on smaller screens the card takes full width */
+        margin: 50px 0; /* Reduces side margins on smaller screens */
+    }
+}
