--- a/Nutricion/nutricion.css
+++ b/Nutricion/nutricion.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Ubuntu Mono', monospace;
+
     margin: 0;
     padding: 0;
 }
@@ -7,38 +7,16 @@ body {
 main {
     text-align: center; /* Aligns text center within main */
     padding: 5rem;
-    background-color: #93a3d8;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center; /* Centers items horizontally */
 }
 
 
-footer {
-    background-color: #11395a;
-    color: seagreen;
-    padding: 1rem;
-    text-align: center;
-    margin-top: 1rem;
-}
-
 .card .container a {
     text-decoration: none; /* Remove underline */
-    color: #551650; /* Set text color for the link */
-}
-
-
-.top-button {
-    text-decoration: none; /* Remove underline */
-    color: #dc0303; /* Set text color for the link */
-}
-
-.top-button:hover {
-    text-decoration: underline; /* Add underline on hover */
-}
-
-.top-button-container {
-    margin-bottom: 20px; /* Add spacing between the button and content */
+    color: rgba(62, 32, 32, 0.95); /* Set text color for the link */
 }
 
 .the-content{
@@ -47,17 +25,17 @@ footer {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.5s; /* ndryshimi ne card me sa sec */
-    color: palevioletred;
-    background-color: #302b63;
+    color: rgba(122, 77, 77, 0.96);
+    background-color: rgba(156, 117, 117, 0.78);
     border-radius: 45px;
     width: 500px;
     margin: 30px;
     padding: 10px;
-    border: 3px solid #551650;
+    border: 3px solid rgba(156, 117, 117, 0.78);
 
 }
 .card:hover {
-    box-shadow: 0 10px 16px 0 rgb(53, 157, 177);
+    box-shadow: 0 10px 16px 0 rgba(142, 78, 44, 0.54);
 }
 
 .container {
@@ -70,16 +48,16 @@ footer {
 }
 
 div.card:hover{
-    background-color: rgb(2, 45, 53);
-    color: rgb(108, 155, 197);
+    background-color: rgba(156, 117, 117, 0.78);
+    color: rgb(255, 255, 255);
     border-radius:45px;
-    border: 2px solid #11395a;
+
 }
 .day {
-    background-color: #ae9aac;
+    background-color: rgba(182, 141, 141, 0.63);;
     padding: 10px 0;
     border-radius:5px;
-    color: #302b63;
+    color: rgba(62, 32, 32, 0.89);
     text-align: center;
 }
 
@@ -99,14 +77,14 @@ div.card:hover{
     margin-left: 50px;
     text-decoration: none;
     color: rgb(243, 238, 238);
-    background: rgb(151, 103, 146);
+    background: rgba(128, 97, 95, 0.66);
     border-radius:15px;
-    border: 2px solid #d59fd0;
+    border: 2px solid rgba(195, 161, 128, 0.66);
 }
 
 .days li a:hover {
-    background-color: #551650;
-    box-shadow: 0 10px 16px 0 rgb(151, 103, 146);
+    background-color: rgba(133, 113, 93, 0.53);
+    box-shadow: 0 10px 16px 0 rgba(112, 57, 37, 0.55);
 }
 
 main {
@@ -118,7 +96,7 @@ section {
 }
 
 h2 {
-    color: #551650;
+    color: rgba(62, 32, 32, 0.89);
 }
 
 ul {
@@ -173,38 +151,43 @@ img{
     color: #555;
     margin: 10px;
 }
-#femij{
-    color: #9f3d95;
-    text-decoration: none;
-}
 
 .top-button {
+    text-decoration: none; /* Remove underline */
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #333;
+    bottom: 30px;
+    right: 30px;
+    background-color: #553737;
     color: white;
-    padding: 12px 24px;
+    padding: 15px 30px;
     border:none;
     border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px rgb(163, 144, 144);
     cursor: pointer;
     opacity: 0.8;
     transition: all 0.3s ease-in-out;
 }
 
 .top-button:hover {
-    background-color: #444;
+    background-color: rgba(106, 51, 51, 0.62);
     opacity: 1;
 }
 
 .top-button:focus {
     outline: none;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
 }
 
 .top-button:active {
-    background-color: #222;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color:rgba(90, 51, 36, 0.99);
     transform: translateY(2px);
 }
+
+.top-link {
+    text-decoration: none; /* Remove underline */
+    color: #ffffff; /* Change color */
+}
+
+#navbar {
+    width: 90%; /* Set the width to 100% to span the entire width of its container */
+}
+
