--- a/semundjet/css.css
+++ b/semundjet/css.css
@@ -1,7 +1,7 @@
 body{
-  background-color: hwb(0 90% 6%);
-  background-image: url(jjj.jpg);
-  /*background-size: cover;
+  background-color: hwb(0 96% 2%);
+  /*background-image: url(jjj.jpg);
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;*/
 }
