--- a/Nutricion/nutricion.css
+++ b/Nutricion/nutricion.css
@@ -25,17 +25,17 @@ main {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.5s; /* ndryshimi ne card me sa sec */
-    color: rgba(122, 77, 77, 0.96);
-    background-color: rgba(156, 117, 117, 0.78);
+    color: rgba(71, 45, 45, 0.96);
+    background-color:  rgb(163, 144, 144);
     border-radius: 45px;
     width: 500px;
     margin: 30px;
     padding: 10px;
-    border: 3px solid rgba(156, 117, 117, 0.78);
+    border: 3px solid rgb(151, 130, 130);
 
 }
 .card:hover {
-    box-shadow: 0 10px 16px 0 rgba(142, 78, 44, 0.54);
+    box-shadow: 0 10px 16px 0 rgba(4, 1, 0, 0.54);
 }
 
 .container {
@@ -48,13 +48,13 @@ main {
 }
 
 div.card:hover{
-    background-color: rgba(156, 117, 117, 0.78);
+    background-color: rgb(140, 119, 119);
     color: rgb(255, 255, 255);
     border-radius:45px;
 
 }
 .day {
-    background-color: rgba(182, 141, 141, 0.63);;
+    background-color: rgba(135, 103, 103, 0.61);;
     padding: 10px 0;
     border-radius:5px;
     color: rgba(62, 32, 32, 0.89);
@@ -77,14 +77,14 @@ div.card:hover{
     margin-left: 50px;
     text-decoration: none;
     color: rgb(243, 238, 238);
-    background: rgba(128, 97, 95, 0.66);
+    background: rgba(110, 79, 77, 0.63);
     border-radius:15px;
-    border: 2px solid rgba(195, 161, 128, 0.66);
+    border: 2px solid rgba(92, 74, 74, 0.42);
 }
 
 .days li a:hover {
-    background-color: rgba(133, 113, 93, 0.53);
-    box-shadow: 0 10px 16px 0 rgba(112, 57, 37, 0.55);
+    background-color: rgba(97, 71, 71, 0.78);
+    box-shadow: 0 10px 16px 0 rgba(90, 65, 65, 0.6);
 }
 
 main {
@@ -97,11 +97,13 @@ section {
 
 h2 {
     color: rgba(62, 32, 32, 0.89);
+    margin: 30px;
 }
 
 ul {
     list-style-type:none ; /* nuk ka asnje simbol para listave */
     padding: 10px;
+    margin: 20px;
 }
 
 li {
@@ -169,7 +171,7 @@ img{
 }
 
 .top-button:hover {
-    background-color: rgba(106, 51, 51, 0.62);
+    background-color: rgba(71, 48, 48, 0.62);
     opacity: 1;
 }
 
@@ -178,7 +180,7 @@ img{
 }
 
 .top-button:active {
-    background-color:rgba(90, 51, 36, 0.99);
+    background-color: rgba(71, 48, 48, 0.85);
     transform: translateY(2px);
 }
 
@@ -188,6 +190,6 @@ img{
 }
 
 #navbar {
-    width: 100%; /* Set the width to 100% to span the entire width of its container */
+    width: 95%; /* Set the width to 100% to span the entire width of its container */
 }
 
